--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -17,6 +17,12 @@ framework:
     php_errors:
         log: true
 
+    http_client:
+        scoped_clients:
+            api:
+                base_uri: 'https://airmockupapi.gac.travel/'
+                auth_basic: 'demo:demo'
+
 when@test:
     framework:
         test: true
