--- a/config/services.yaml
+++ b/config/services.yaml
@@ -12,6 +12,8 @@ services:
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
     # makes classes in src/ available to be used as services
+    app.airmockup:
+        class: AppBundle\AirMockUp
     # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/'
